fix(category): 新增category接口返回新增对象