@@ -3,16 +3,19 @@ package com.hmetao.code_dictionary.utils;
 import com.github.pagehelper.PageInfo;
 import org.springframework.beans.BeanUtils;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 
 public class MapUtils {
     public static <T> T beanMap(Object source, Class<T> mapClazz) {
         T target = null;
         try {
-            target = mapClazz.newInstance();
+            target = mapClazz.getDeclaredConstructor().newInstance();
             BeanUtils.copyProperties(source, target);
         } catch (InstantiationException | IllegalAccessException e) {
             e.printStackTrace();
+        } catch (InvocationTargetException | NoSuchMethodException e) {
+            throw new RuntimeException(e);
         }
         return target;
     }
